kube-config/INT/thefarmerkit-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: thefarmerkit-backend
  namespace: thehillogy-int
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: thefarmerkit-backend
